Adding unnormalized results mat file

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !FFRmodel/UR_CE.mat
 !FFRmodel/Zilany2014_new/*.mat
 !FFRmodel/resultsSummary.mat
+!FFRmodel/resultsSummaryUnnorm.mat
 !BW/midear_Moore_et_al_1997.mat
 
 
